--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "http://project-osrm.org",
   "author": "Dane Springmeyer <springmeyer>",
   "version": "5.5.0-rc.1",
-  "osrm_release" : "v5.5.0-rc.1",
+  "osrm_release" : "5.5",
   "main": "./lib/osrm.js",
   "license": "BSD-2-Clause",
   "bugs": {
